Fix focus highlight in Request initiator chain in network panel
This CL fix the issue where the focus highlight bar in the initiator
panel doesn't cover the whole panel.

Before: https://i.imgur.com/cce5W10.jpg
After: https://i.imgur.com/ZVrrI03.jpg

Bug: 1160637

--- a/front_end/network/requestInitiatorViewTree.css
+++ b/front_end/network/requestInitiatorViewTree.css
@@ -4,6 +4,10 @@
  * found in the LICENSE file.
  */
 
+.request-initiator-view-tree.tree-outline li .selection {
+  margin-right: -6px; /* Same margin but negative than the element .request-initiator-view */
+}
+
 .request-initiator-view-section-title {
   font-weight: bold;
   padding: 4px;
